# achim

./: .gitignore  LICENSE.txt  README.md  TODO.md  achim.py  cloud-init-example.yaml  exercise-dynamic.yaml  exercise-managed.yaml  exercise.yaml  exoscale.py  group.yaml  main.py  networking.md  pyproject.toml  requirements.txt  sample.env  scenario.yaml  scenario2.yaml  teachers.yaml
achim/: __init__.py  __main__.py  achim.py  exoscale.py  utils.py
achim/templates/: overview.html  scenario.html
docs/: ipfire.md
examples/: group.yaml  ipfire-firewall-with-ubuntu-windows.yaml
scenarios/: openbsd-network.yaml
