[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "achim"
authors = [{ name = "Patrick Bucher", email = "patrick.bucher@mailbox.org" }]
description = "Advanced Cloud Hyperscaling Infrastructure Manager"
readme = "README.md"
keywords = ["Cloud", "Exoscale", "Compute"]
license = { text = "MIT" }
classifiers = ["Programming Language :: Python :: 3"]
version = "0.0.7"
dependencies = [
    "click",
    "python-dotenv",
    "Jinja2",
    "PyYAML",
    "requests",
    "requests-exoscale-auth",
]

[project.scripts]
achim = "achim:cli"
