[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools"]

[project]
authors = [{name = "Patrick Bucher", email = "patrick.bucher@mailbox.org"}]
classifiers = ["Programming Language :: Python :: 3"]
dependencies = [
  "click",
  "python-dotenv",
  "Jinja2",
  "PyYAML",
  "requests",
  "requests-exoscale-auth",
]
description = "Advanced Cloud Hyperscaling Infrastructure Manager"
keywords = ["Cloud", "Exoscale", "Compute"]
license = {text = "MIT"}
name = "achim"
readme = "README.md"
version = "0.0.13"

[project.scripts]
achim = "achim:cli"
